# apex-on-stellar

./: .gitignore  .vercelignore  CONTRIBUTING.md  Cargo.toml  OPERATIONS.md  README.md  SECURITY.md  deployments.md
.claude/: launch.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
contracts/: Cargo.toml  DEPLOYMENT.md
contracts/apex-futures/: Cargo.toml
contracts/apex-futures/proptest-regressions/: fuzz.txt
contracts/apex-futures/src/: admin.rs  errors.rs  events.rs  funding.rs  fuzz.rs  lib.rs  liquidation.rs  margin.rs  oracle.rs  sep40.rs  storage.rs  test.rs
contracts/apex-marketplace/: Cargo.toml  deploy-config.json
contracts/apex-marketplace/src/: admin.rs  cu_token.rs  errors.rs  events.rs  fuzz.rs  index_pool.rs  lib.rs  normalization.rs  redemption.rs  registry.rs  series.rs  settlement.rs  storage.rs  test.rs
contracts/apex_contract/src/: margin.rs  test.rs  vamm.rs
contracts/src/: liquidation.rs  margin.rs  vamm.rs
docs/: cu-spec.md  implementation-plan.md  pitch-outline.md  redemption-design.md  video-outline.md
frontend/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: BalanceDisplay.tsx  Logo.tsx  TradeForm.tsx  TransactionResult.tsx  WalletConnect.tsx
frontend/src/config/: env.ts
frontend/src/hooks/: useIndex.ts  useProtocol.ts  useSoroban.ts  useSoroban.tsx
frontend/src/lib/: contract.ts  marketplace.ts  role.ts  (+3 more)
scripts/: README.md  attest-capacity.mjs
(+38 files in other folders)
