[package]
name = "apex-futures"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Property-based / fuzz testing of protocol invariants (see src/fuzz.rs).
proptest = "1"

# Release profiles are inherited from the workspace root Cargo.toml.
